data/forge_javadoc/1.7.10/raw/net/minecraft/entity/projectile/EntityLargeFireball.md
---
title: "EntityLargeFireball"
description: "public class EntityLargeFireball extends EntityFireball"
package: "net/minecraft/entity/projectile"
version: "1.7.10"
forgeBuild: "10.13.4.1614"
fetchedWith: "c4-2026-09-22"
source: "https://skmedix.github.io/ForgeJavaDocs/javadoc/forge/1.7.10-10.13.4.1614/net/minecraft/entity/projectile/EntityLargeFireball.html"
sourceType: javadoc
---

# EntityLargeFireball

**Inheritance:** java.lang.Object → net.minecraft.entity.Entity → net.minecraft.entity.projectile.EntityFireball → net.minecraft.entity.projectile.EntityLargeFireball

## Class signature

```java
public class EntityLargeFireball extends EntityFireball
```

## Constructors

- `EntityLargeFireball(World p_i1767_1_)`
- `EntityLargeFireball(World p_i1768_1_, double p_i1768_2_, double p_i1768_4_, double p_i1768_6_, double p_i1768_8_, double p_i1768_10_, double p_i1768_12_)`
- `EntityLargeFireball(World p_i1769_1_, EntityLivingBase p_i1769_2_, double p_i1769_3_, double p_i1769_5_, double p_i1769_7_)`

## Methods

- `protected void onImpact(MovingObjectPosition p_70227_1_)`
- `void readEntityFromNBT(NBTTagCompound p_70037_1_)`
- `void writeEntityToNBT(NBTTagCompound p_70014_1_)`

## Fields

- `int field_92057_e`
